Add Interval and Scheduled Commands
